--- a/public/comex/comex.css
+++ b/public/comex/comex.css
@@ -40,12 +40,11 @@
     transition: all .1s !important;
 }
 .quantidade{
-  border: 2px solid blue;
   border-radius: 5px;
   position:absolute;
   font-size:8pt;
   color:white;
-  background-color:green;
+  background-color:blue;
  }
 
 body{
