--- a/resources/css/comex.css
+++ b/resources/css/comex.css
@@ -72,11 +72,11 @@ body{
  z-index:10000000;
 }
 .quantidade{
-  border: 2px solid blue;
   border-radius: 5px;
   position:absolute;
-  font-size:pt;
-  background-color:green;
+  font-size:8pt;
+  color:white;
+  background-color:blue;
  }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
