--- a/resources/css/comex.css
+++ b/resources/css/comex.css
@@ -71,13 +71,19 @@ body{
  margin:10px;
  z-index:10000000;
 }
-.quantidade{
-  border-radius: 5px;
+.quantidade {
   position:absolute;
+  top:3px;
+  background-color: green;
+  opacity: 50%;
+  color: #fff;
   font-size:8pt;
-  color:white;
-  background-color:blue;
- }
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 4px;
+  text-align: center;
+  margin-left: 5px;
+}
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html{line-height:1.15;-webkit-text-size-adjust:100%}
